阶段 2.7: 固定评测集与单变量试验 - 建立固定问题集 - 准备20个问题，覆盖各种情况，主要用于项目回归，不具有通用统计代表性 - 记录检索和端到端延迟 - 控制变量：比较Chunk策略/Top K